# test_task_uptrader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
treemenu/app/: admin.py  models.py  urls.py  views.py
treemenu/app/migrations/: 0001_initial.py
treemenu/app/templatetags/: tree_menu.py
treemenu/treemenu/: settings.py  urls.py
