[tool.poetry]
name = "testwork-uptrader"
version = "0.1.0"
description = ""
authors = ["Aleksey Lesnikov"]
readme = "README.md"
packages = [{include = "testwork_uptrader"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
